--- a/Oblqo/Controls/TaskList.ru.resx
+++ b/Oblqo/Controls/TaskList.ru.resx
@@ -121,12 +121,12 @@
   <data name="activeTasksStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFESURBVDhPjVI9L0VBED2EKCS0CjqFikL8AyT8JNGIXyBB
-        QsTPkEiImohKQyNUovF8vOfj3t11Zu9cd3ezj3uSk3ffnJnZ2TOLPNwgYKfIOXKWnKxirVCsAOUV8PYO
-        nJmK8l1eUFvSpBzsKGAOSPcPd5k7okUhwuJOj6fdNv9DHlr+7mtRDRk7SmQzOaVcB3qdRFMWq1os5sid
-        o4Q9FQk3Q/0y0YWn1AaYIG6LSZEYNBC4ITZZA7ovTc7nE+PjFGVV4vRfDWrYaeD7vsq5LtlgQoLcc5sG
-        Mq6bZ4OHtAEfSZsrmA3g+aPJ+b2CN/G8EdIGdqGPicesFRMFxWIi6hrNZnxqyGJZi2uYHX0kFF+7TLiJ
-        C2p6v7a1KIQ/kaPniiJucfRhLcrBv8qTyiRx+q4Avh4ZO8qM3Q9+ZXRY1iS0Y1UsBfAD7JwwW0uY1dkA
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFESURBVDhPjVJNLwRBEH2EOEi4OnBzcOIg/gESfpK4iF8g
+        QUL2d0gkxJmIkwsX4SQu1seuj57p9qq7xnR3ZpmXvOxsvarq6leNZrhhwM6QC+Q8OR1irWDWgOIKeHsH
+        zspA+S4uqK1oUhPsOFB2SPcP95k7pkUx4uJun6fd1v9jdix/D7WogoydJLKZnFJsAv1upinNuhaLOXLn
+        JOFARcLNUb/MdOEptSEmiNtiUiJGDQRuhE02gN5LnfP5xPgkRVmVOP1Xgwp2Fvi+DznXBRtMSZB7btNA
+        xnWLbPCQN+AjaXOFcgt4/qhzfq/gTTyvhbyBXRpg4jFrxUSBWc5EXWO5nZ4a06xqcYVyTx8JxdceE27S
+        gorer10tiuFP5OhNRQl3OPqoFjXBv8qTYJI4fWeAr0fGjhrGHgS/MjosaxLaiRDLAfwA5H4wV7zn2MQA
         AAAASUVORK5CYII=
 </value>
   </data>
@@ -158,12 +158,12 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFHSURBVDhPdZLNSgNBEITLBJ8g6iEkqKdArr6YyAZFNHrT
-        t/ClFH8hBn/AayCHRM369dCDk9ndhqKG2qqentlRXqXUXklD+CAF2gBuua25fqWrD2lJoEzxJS3gC7dV
+        l/CtFH8hBn/AayCHRM369dCDk9ndhqKG2qqentlRXqXUXklD+CAF2gBuua25fqWrD2lJoEzxJS3gC7dV
         i+6bhK/zYA48l3jbHvsvC99Iq7pQilvpx5p4DIVuNnY0fEv38BH8kGiP8Ah+jhoYhzthMczOPLLGcJ/A
         xBvuuHbonnImzeFtm8BuOIZttxd43wM9sOvrwVJ6M0+CbqWBwYzoexa0QuujTXMfqG/gY4edrVj30O5S
         j6PaAKNdWDxzP05ia6Z4jT5HN5zNH0kQCZx4wM48peET63gnRfTNpRncsQlaLM7jBwIT+Jjwe9QW0id8
-        mmqgILthjUMhjO2RJIZa+C8Pv3qtfJJxam7AaG3nvDCc+SNZC/qZC7c1l00CtjB3M3SqO0t/k29GfZyX
-        3BcAAAAASUVORK5CYII=
+        mmqgILthjUMhjO2RJIZa+C8Pv3qtfJJxam7AaG3nvDCc+SNZC/qZC7c1l00CtjB3M3SqO0t/jO9Ge0kG
+        mrEAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="cancelledTasksStripButton.Size" type="System.Drawing.Size, System.Drawing">
@@ -190,14 +190,27 @@
   <data name="queuedTasksStripButton.Text" xml:space="preserve">
     <value>В очереди</value>
   </data>
+  <data name="tasksToolStrip.Size" type="System.Drawing.Size, System.Drawing">
+    <value>612, 25</value>
+  </data>
   <data name="taskColumnHeader.Text" xml:space="preserve">
     <value>Файл/Папка</value>
+  </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="taskColumnHeader.Width" type="System.Int32, mscorlib">
+    <value>227</value>
   </data>
   <data name="taskTypeColumnHeader.Text" xml:space="preserve">
     <value>Задача</value>
   </data>
+  <data name="taskTypeColumnHeader.Width" type="System.Int32, mscorlib">
+    <value>255</value>
+  </data>
   <data name="sizeColumnHeader.Text" xml:space="preserve">
     <value>Размер</value>
+  </data>
+  <data name="taskListView.Size" type="System.Drawing.Size, System.Drawing">
+    <value>612, 333</value>
   </data>
   <data name="cancelTaskToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>130, 22</value>
@@ -213,5 +226,8 @@
   </data>
   <data name="taskMenu.Size" type="System.Drawing.Size, System.Drawing">
     <value>131, 48</value>
+  </data>
+  <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
+    <value>612, 358</value>
   </data>
 </root>
