--- a/Oblqo/Resources.resx
+++ b/Oblqo/Resources.resx
@@ -132,6 +132,15 @@
   <data name="CloseApp_Message" xml:space="preserve">
     <value>You really want close Oblqo?</value>
   </data>
+  <data name="CreateFolder" xml:space="preserve">
+    <value>Create Folder</value>
+  </data>
+  <data name="DeleteEmptyFolder" xml:space="preserve">
+    <value>Delete Empty Folder</value>
+  </data>
+  <data name="DeleteFile" xml:space="preserve">
+    <value>Delete File</value>
+  </data>
   <data name="DeleteFileFromArchiveAndDrives_Caption" xml:space="preserve">
     <value>Delete file(s) from Archive &amp; Drives</value>
   </data>
@@ -144,11 +153,23 @@
   <data name="DeleteFileFromArchive_Message" xml:space="preserve">
     <value>Do you really want to Delete this file(s) from Archive?</value>
   </data>
+  <data name="DeleteFolder" xml:space="preserve">
+    <value>Delete Folder</value>
+  </data>
   <data name="DeleteFolder_Caption" xml:space="preserve">
     <value>Delete folder</value>
   </data>
   <data name="DeleteFolder_Message" xml:space="preserve">
     <value>Do you really want to Delete this filder?</value>
+  </data>
+  <data name="DownloadFileFromDisk" xml:space="preserve">
+    <value>Download File from Disk</value>
+  </data>
+  <data name="DownloadFileFromStorage" xml:space="preserve">
+    <value>Download File from Archive</value>
+  </data>
+  <data name="DownloadFolder" xml:space="preserve">
+    <value>Download Folder</value>
   </data>
   <data name="EmptyConnectionName_Message" xml:space="preserve">
     <value>Connection Name can't be empty</value>
@@ -188,5 +209,17 @@
   </data>
   <data name="RestoreTasks_Message" xml:space="preserve">
     <value>You have uncompleted tasks. Do you want to continue this tasks?</value>
+  </data>
+  <data name="SyncFile" xml:space="preserve">
+    <value>Sync File</value>
+  </data>
+  <data name="SyncFileOnDrive" xml:space="preserve">
+    <value>Sync File on Drive</value>
+  </data>
+  <data name="UploadFile" xml:space="preserve">
+    <value>Upload File</value>
+  </data>
+  <data name="UploadFolder" xml:space="preserve">
+    <value>Upload Folder</value>
   </data>
 </root>
